
    o	The data editor is no longer limited to 65535 rows, and will
	be substantially faster for large numbers of columns.

    o	Standalone Rmath now has a get_seed function as requested (PR#3160).

    o	GC timing is not enabled until the first call to gc.time(); it
	can be disabled by calling gc.time(FALSE).  This can speed up
	the garbage collector and reduce system calls on some
	platforms.


STANDARD PACKAGES

    o   New package 'mle'. This is a simple package to find maximum
        likelihood estimates, and perform likelihood profiling and
        approximate confidence limits based upon it. A well-behaved
	likelihood function is assumed, and it is the responsibility
	of the user to gauge the applicability of the asymptotic
        theory. This package is based on S4 methods and classes.

    o	Changes in package 'mva':

	- factanal() now returns the test statistic and P-value formerly
	  computed in the print method.

	- heatmap() has many more arguments, partly thanks to Wolfgang
          Huber and Andy Liaw.

	- Arguments `unit' and `hmin' of plclust() are now implemented.

	- prcomp() now accepts complex matrices, and there is biplot()
	  method for its output (in the real case).

	- dendrograms are slightly better documented, methods working with
	  "label", not "text" attribute.
	  New rev() method for dendrograms.

    o	Changes in package 'tcltk':

	- The package is now in a namespace.  To remove it you will
	  now need to use unloadNamespace("tcltk").

	- The interface to Tcl has been made much more efficient by
	  evaluating Tcl commands via a vector of Tcl objects rather
	  than by constructing the string representation.

	- An interface to Tcl arrays has been introduced.

	- as.tclObj() has gained a `drop' argument to resolve an
	  ambiguity for vectors of length one.

    o	Changes in package 'tools':

	- Utilities for testing and listing files, manipulating file
	  paths, and delimited pattern matching are now exported.
