@@ -51,6 +51,7 @@ int R_OutputCon;		/* used in printutils.c */
 #define NSINKS 21
 
 static Rconnection Connections[NCONNECTIONS];
+static SEXP OutTextData;
 
 static int R_SinkNumber;
 static int SinkCons[NSINKS], SinkConsClose[NSINKS];
@@ -67,6 +68,16 @@ int NextConnection()
 	if(!Connections[i]) break;
     if(i >= NCONNECTIONS)
 	error("All connections are in use");
+    return i;
+}
+
+static int ConnIndex(Rconnection con)
+{
+    int i;
+    for(i = 0; i < NCONNECTIONS; i++)
+	if(Connections[i] == con) break;
+    if(i >= NCONNECTIONS)
+	error("connection not found");
     return i;
 }
 
@@ -1545,14 +1556,16 @@ static void outtext_close(Rconnection con)
 {
     Routtextconn this = (Routtextconn)con->private;
     SEXP tmp;
+    int idx = ConnIndex(con);
 
     if(strlen(this->lastline) > 0) {
 	PROTECT(tmp = lengthgets(this->data, ++this->len));
 	SET_STRING_ELT(tmp, this->len - 1, mkChar(this->lastline));
-	defineVar(this->namesymbol, tmp, R_GlobalEnv);
+	defineVar(this->namesymbol, tmp, VECTOR_ELT(OutTextData, idx));
 	this->data = tmp;
 	UNPROTECT(1);
     }
+    SET_VECTOR_ELT(OutTextData, idx, R_NilValue);
 }
 
 static void outtext_destroy(Rconnection con)
@@ -1607,10 +1620,11 @@ static int text_vfprintf(Rconnection con, const char *format, va_list ap)
     for(p = b; ; p = q+1) {
 	q = strchr(p, '\n');
 	if(q) {
+	    int idx = ConnIndex(con);
 	    *q = '\0';
 	    PROTECT(tmp = lengthgets(this->data, ++this->len));
 	    SET_STRING_ELT(tmp, this->len - 1, mkChar(p));
-	    defineVar(this->namesymbol, tmp, R_GlobalEnv);
+	    defineVar(this->namesymbol, tmp, VECTOR_ELT(OutTextData, idx));
 	    this->data = tmp;
 	    UNPROTECT(1);
 	} else {
@@ -1629,7 +1643,7 @@ static int text_vfprintf(Rconnection con, const char *format, va_list ap)
     return res;
 }
 
-static void outtext_init(Rconnection con, char *mode)
+static void outtext_init(Rconnection con, char *mode, int idx)
 {
     Routtextconn this = (Routtextconn)con->private;
     SEXP val;
@@ -1638,15 +1652,16 @@ static void outtext_init(Rconnection con, char *mode)
     if(strcmp(mode, "w") == 0) {
 	/* create variable pointed to by con->description */
 	PROTECT(val = allocVector(STRSXP, 0));
-	defineVar(this->namesymbol, val, R_GlobalEnv);
+	defineVar(this->namesymbol, val, VECTOR_ELT(OutTextData, idx));
 	UNPROTECT(1);
     } else {
 	/* take over existing variable */
-	val = findVar1(this->namesymbol, R_GlobalEnv, STRSXP, FALSE);
+	val = findVar1(this->namesymbol, VECTOR_ELT(OutTextData, idx),
+		       STRSXP, FALSE);
 	if(val == R_UnboundValue) {
 	    warning("text connection: appending to a non-existent char vector");
 	    PROTECT(val = allocVector(STRSXP, 0));
-	    defineVar(this->namesymbol, val, R_GlobalEnv);
+	    defineVar(this->namesymbol, val, VECTOR_ELT(OutTextData, idx));
 	    UNPROTECT(1);
 	}
     }
@@ -1657,7 +1672,8 @@ static void outtext_init(Rconnection con, char *mode)
 }
 
 
-static Rconnection newouttext(char *description, SEXP sfile, char *mode)
+static Rconnection newouttext(char *description, SEXP sfile, char *mode,
+			      int idx)
 {
     Rconnection new;
     void *tmp;
@@ -1694,13 +1710,13 @@ static Rconnection newouttext(char *description, SEXP sfile, char *mode)
 	free(new->description); free(new->class); free(new);
 	error("allocation of text connection failed");
     }
-    outtext_init(new, mode);
+    outtext_init(new, mode, idx);
     return new;
 }
 
 SEXP do_textconnection(SEXP call, SEXP op, SEXP args, SEXP env)
 {
-    SEXP sfile, stext, sopen, ans, class;
+    SEXP sfile, stext, sopen, ans, class, venv;
     char *desc, *open;
     int ncon;
     Rconnection con = NULL;
@@ -1717,12 +1733,21 @@ SEXP do_textconnection(SEXP call, SEXP op, SEXP args, SEXP env)
     if(!isString(sopen) || length(sopen) != 1)
 	error("invalid `open' argument");
     open = CHAR(STRING_ELT(sopen, 0));
+    venv = CADDDR(args);
+    if (!isEnvironment(venv) && venv != R_NilValue)
+	error("invalid 'environment' argument");
     ncon = NextConnection();
     if(!strlen(open) || strncmp(open, "r", 1) == 0)
 	con = Connections[ncon] = newtext(desc, stext);
-    else if (strncmp(open, "w", 1) == 0 || strncmp(open, "a", 1) == 0)
+    else if (strncmp(open, "w", 1) == 0 || strncmp(open, "a", 1) == 0) {
+	if (OutTextData == NULL) {
+	    OutTextData = allocVector(VECSXP, NCONNECTIONS);
+	    R_PreserveObject(OutTextData);
+	}
+	SET_VECTOR_ELT(OutTextData, ncon, venv);
 	con = Connections[ncon] =
-	    newouttext(CHAR(STRING_ELT(stext, 0)), sfile, open);
+	    newouttext(CHAR(STRING_ELT(stext, 0)), sfile, open, ncon);
+    }
     else
 	errorcall(call, "unsupported mode");
     /* already opened */
